--- a/inpaint.yml
+++ b/inpaint.yml
@@ -9,10 +9,10 @@ gpu_type: 'nvidia-tesla-p100'
 # parameters
 name: places2_gated_conv_v100  # any name
 model_restore: 'MODEL_RESTORE: 20180115220926508503_places2_model'  # logs/places2_gated_conv
-dataset: 'celebahq'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
+dataset: 'myown'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
 random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
 val: False  # true if you want to view validation results in tensorboard
-log_dir: logs/full_model_celeba_hq_256
+log_dir: ./logs
 
 gan: 'sngan'
 gan_loss_alpha: 1
@@ -49,6 +49,9 @@ data_flist:
     'data/imagenet/train_shuffled.flist',
     'data/imagenet/validation_static_view.flist',
   ]
+  myown: [
+     './data_flist/train_shuffled.flist'
+     './data_flist/validation_shuffled.flist'
 
 static_view_size: 30
 img_shapes: [256, 256, 3]
