--- a/inpaint.yml
+++ b/inpaint.yml
@@ -50,7 +50,7 @@ data_flist:
     'data/imagenet/validation_static_view.flist',
   ]
   myown: [
-     './data_flist/train_shuffled.flist'
+     './data_flist/train_shuffled.flist',
      './data_flist/validation_shuffled.flist'
   ]
 static_view_size: 30
