--- a/inpaint.yml
+++ b/inpaint.yml
@@ -12,7 +12,7 @@ model_restore: '' # logs/places2_gated_conv
 dataset: 'myown'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
 random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
 val: True  # true if you want to view validation results in tensorboard
-log_dir: /content/drive/MyDrive/logs
+log_dir: ./logs
 
 gan: 'sngan'
 gan_loss_alpha: 1
@@ -50,8 +50,8 @@ data_flist:
     'data/imagenet/validation_static_view.flist',
   ]
   myown: [
-     '/content/drive/MyDrive/data_flist/train_shuffled.flist',
-     '/content/drive/MyDrive/data_flist/validation_shuffled.flist'
+     './data_flist/train_shuffled.flist',
+     './data_flist/validation_shuffled.flist'
   ]
 static_view_size: 30
 img_shapes: [256, 256, 3]
