--- a/inpaint.yml
+++ b/inpaint.yml
@@ -4,7 +4,7 @@ num_gpus_per_job: 1  # number of gpus each job need
 num_cpus_per_job: 4  # number of gpus each job need
 num_hosts_per_job: 1
 memory_per_job: 32  # number of gpus each job need
-gpu_type: 'nvidia-tesla-p100'
+gpu_type: 'nvidia-tesla-t4'
 
 # parameters
 name: places2_gated_conv_v100  # any name
@@ -50,8 +50,8 @@ data_flist:
     'data/imagenet/validation_static_view.flist',
   ]
   myown: [
-     '../input/shuffled/train_shuffled.flist',
-     '../input/shuffled/validation_shuffled.flist'
+     '/content/drive/MyDrive/data_flist/train_shuffled.flist',
+     '/content/drive/MyDrive/data_flist/validation_shuffled.flist'
   ]
 static_view_size: 30
 img_shapes: [256, 256, 3]
